discussion/kv_engine/176594/176594_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

Account for non-zero initial mem_usage in DCP test

As part of this test, items are written until a new open checkpoint is
created when `vb_0:mem_usage >= ep_checkpoint_max_size`.

Previously, we didn't account for the initial mem_usage before items
were added, which could cause test failure by making an item that
should've been in the current checkpoint "overflow" into the next.

Change-Id: Ic2f77d0c2741db086b73caf15de311640a624079

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Douglas
Date: 2022-07-01 08:42:41.000000000
Message: 
Patch Set 6: Published edit on patch set 5.
----------------------------------------------------------------------------------------------------------------------
Author: Douglas
Date: 2022-07-01 08:43:07.000000000
Message: 
Patch Set 6:

(1 comment)
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-07-01 10:15:20.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47243/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\ep_testsuite_dcp.cc(2021): error C2059: syntax error: "," ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/47243/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18478/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2021:5: error: reference to overloaded function could not be resolved; did you mean to call it? [clang-diagnostic-error]
    checkge(openCkptMemFree, itemsPerCheckpoint);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_common.h:72:13: note: possible target for call
static void checkgefn(T exp, T got, const char *msg, const char *file,
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2021:5: error: use of undeclared identifier "checkge"; did you mean "checkgefn"? [clang-diagnostic-error]
    checkge(openCkptMemFree, itemsPerCheckpoint);
    ^~~~~~~
    checkgefn
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_common.h:72:13: note: "checkgefn" declared here
static void checkgefn(T exp, T got, const char *msg, const char *file,
            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2021:48: error: too few arguments provided to function-like macro invocation [clang-diagnostic-error]
    checkge(openCkptMemFree, itemsPerCheckpoint);
                                               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_common.h:101:9: note: macro "checkge" defined here
#define checkge(expected, actual, msg) \
        ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18478/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2021:5:
error: reference to overloaded function could not be resolved; did you mean to call it? [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/18478/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28741/ : FAILURE

Compile error at [2022-07-01T09:38:02.630Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2021:48:
error: too few arguments provided to function-like macro invocation
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/28741/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19582/ : FAILURE

Compile error at [2022-07-01T10:15:07.540Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2021:48:
error: too few arguments provided to function-like macro invocation
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/19582/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20361/ : FAILURE

Compile error at [2022-07-01T09:34:57.444Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2021:48:
error: macro "checkge" requires 3 arguments, but only 2 given
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/20361/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20710/ : FAILURE

Compile error at [2022-07-01T09:36:43.107Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2021:48:
error: macro "checkge" requires 3 arguments, but only 2 given
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/20710/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21349/ : FAILURE

Compile error at [2022-07-01T09:35:26.668Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2021:48:
error: too few arguments provided to function-like macro invocation
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/21349/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8247/ : FAILURE

Compile error at [2022-07-01T09:15:52.716Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2021:48:
error: macro "checkge" requires 3 arguments, but only 2 given
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/8247/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8149/ : FAILURE

Compile error at [2022-07-01T09:33:01.138Z] ../kv_engine/engines/ep/tests/ep_testsuite_dcp.cc:2021:48:
error: too few arguments provided to function-like macro invocation
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/8149/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/17629/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/39690/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
